--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
-fastapi
-uvicorn[standard]
-openai>=1.6.0
-pdf2image
-pillow
-python-multipart
+fastapi==0.110.0
+uvicorn[standard]==0.29.0
+
+openai==1.14.3
+
+Pillow==10.2.0
+PyMuPDF==1.24.0   # thay pdf2image – không cần Poppler
+
+python-multipart==0.0.9
