--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 fastapi==0.110.0
 uvicorn==0.29.0
 openai==1.14.3
-Pillow==9.5.0
+httpx==0.27.2
+Pillow==10.2.0
 PyMuPDF==1.24.0
 python-multipart==0.0.9
